css/main.css
/* ... */
@media screen and (max-width: 767px) {
  .container {
    width: 320px;
  }
  .footer_txt {
    text-align: justify;
    font-size: 13px;
    margin: 0 10px 0 10px;
  }
  h1 {
    margin: 0 auto;
    text-align: center;
  }
  .header {
    padding: 14px 0px 14px 0;
  }
  .span_h1 {
    font-size: 30px;
  }
  .h1_span {
    font-size: 23px;
  }
  .uniq {
    display: block;
    margin: 0;
    padding-top: 10px;
    padding-right: 40px;
    padding-left: 40px;
    font-size: 18px;
    font-weight: 700;
    text-align: center;
    color: #414148;
    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.58);
  }
  .sm {
    display: block !important;
  }
  .md {
    display: none !important;
  }
  .article {
    padding: 0 0 10px 0;
  }
  .article ul {
    margin: 305px 0 15px 35px;
    padding: 0 0 0 10px;
  }
  .article .producto {
    margin: 0 10px 0 0;
    max-width: 206px;
  }
  .article .product {
    margin: 0 10px 0 0;
    max-width: 206px;
  }
  .article .product {
    left: 20px;
    top: 140px;
    bottom: 60px;
  }
  .button {
    margin: 0 0 0 40px;
    width: 252px;
    font-size: 22px;
    padding: 22px 22px 22px 25px;
    text-transform: uppercase;
    background: url("../img/button.png") no-repeat;
    color: #36342f;
    border: none;
    outline: none;
    -moz-transition: all 1s ease-out;
    -o-transition: all 1s ease-out;
    -webkit-transition: all 1s ease-out;
    cursor: pointer;
    font-weight: 900;
  }
  .section_2 .italicc {
    font-style: italic;
    margin-left: 5px;
    color: #7ec04c;
  }
  form {
    left: 35px;
    top: -480px;
  }
  .section_4 .producto {
    left: 192px;
    bottom: 27px;
    display: none;
  }
  .section_4 .producto img {
    max-width: 120px;
  }
  .list {
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
  .section_4 .ul_1 {
    margin: 20px 0 0 20px;
    max-width: 280px;
  }
  h1 {
    font-size: 20px;
  }
  .section_1 .article_2 {
    padding: 15px 16px;
  }
  .section_1 .article_2 p {
    margin-bottom: 10px;
  }
  .section_1 h2 {
    text-align: center;
    margin: 5px 0 10px 0;
  }
  .section_2 img {
    max-width: 130px;
  }
  .section_2 .producto img {
    max-width: 183px;
  }
  .section_2 .producto {
    right: 0px;
    top: -224px;
  }
  .section_2 h2 {
    margin: 5px 0 22px 0;
  }
  .section_2 .item {
    max-width: 290px;
  }
  .section_3 .items {
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
  .section_3 .item {
    padding: 5px 5px 130px 5px;
    max-width: 160px;
    font-size: 21px;
  }
  .section_3 .item p {
    font-size: 16px;
  }
  .section_3 .opacity_block {
    font-size: 13px;
    padding: 10px 10px;
  }
  .section_5 .items {
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: 0;
  }
  .section_5 .item {
    margin: 0 27px 15px;
  }
  .section_5 .item {
    line-height: 1.5;
  }
  .section_5 .item img {
    max-width: 80px;
    -webkit-box-flex: 0;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
  }
  .section_5 h2 {
    font-size: 19px;
  }
  .article_footer form {
    top: 355px;
  }
  .article_footer ul {
    display: none;
    margin: 0 0 0 50px;
    padding: 0;
    max-width: 280px;
  }
  .article_footer ul li {
    font-size: 14px;
  }
  .article_footer .h {
    padding: 630px 0 0 0;
    background: #fafafa;
    margin-left: 0;
  }
  .article_footer h3 {
    text-transform: uppercase;
    font-size: 28px;
    display: block;
    text-align: center;
    font-weight: 900;
    color: #fff;
    line-height: 1.1;
    margin: 0 10px 0 10px;
    text-shadow: 2px 3px 4px rgba(0, 0, 0, 0.58);
    padding-top: 10px;
  }
  .article_footer h4 {
    font-size: 24px;
    display: block;
    font-weight: 900;
    color: #fff;
    line-height: 1.1;
    text-align: center;
    text-shadow: 2px 3px 4px rgba(0, 0, 0, 0.58);
  }
  .article_footer h5 {
    font-size: 16px;
    text-align: center;
    display: block;
    font-weight: 700;
    color: #414148;
    line-height: 1.1;
    margin: 0 0 10px 0;
    text-shadow: 0 0px 1px rgba(0, 0, 0, 0.58);
    max-width: 410px;
  }
  .article_footer .producto {
    top: 160px;
    left: 45px;
  }
  .article_footer {
    padding-bottom: 0;
  }
  .footer_text {
    padding: 15px 5px 15px 5px;
  }
  .footer_links {
    font-size: 16px;
    text-align: center;
    margin: 0 auto;
  }
  .footer_links a {
    padding: 15px 5px;
    display: inline-block;
    color: #5c5c5c;
  }
}
.container-rect {
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255, 255, 255, 0.43);
  padding-top: 15px;
  padding-bottom: 15px;
}
.rectangle {
  width: 80%; /* Ширина прямоугольника */
  max-width: 600px; /* Максимальная ширина прямоугольника */
  background: rgba(255, 255, 255, 0.43);
  border: 2px dashed #000; /* Цвет обводки прямоугольника (красный) */
  padding: 15px; /* Внутренний отступ внутри прямоугольника */
  text-align: center;
  box-sizing: border-box;
  font-size: 12px;
  color: #000;
}
.rectangle p {
  text-align: center;
  padding-top: 2px;
}
.rectangle .rectb {
  text-align: center;
}
.rectangle span {
  color: #e32636;
  font-weight: 700;
  text-transform: uppercase;
  font-size: 20px;
}
@media (max-width: 768px) {
  /* Дополнительные стили для мобильных устройств */
  .rectangle {
    width: 90%;
  }
}

.sucessful_order_container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: #00000096;
  z-index: 2;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 40px;
}
.sucessful_order {
  background-color: white;
  border-radius: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 30px;
  gap: 15px;
  position: fixed;
  max-width: 500px;
  margin: 20px;
}
.tick {
}
.sucessful_message {
  text-align: center;
}
.close_button {
  background-color: #414148;
  color: white;
  border-radius: 6px;
  padding: 10px 20px;
  cursor: pointer;
}

